objects/Substate_History__c.object
<CustomObject>
    <fields>
        <fullName>Current_Status_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Substate History</relationshipLabel>
        <relationshipName>Substate_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Status_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substatus_Change_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substatus Change Date</label>
        <type>Date</type>
    </fields>
    <label>Substate History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Substate History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substate Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>